--- a/Assets/style.css
+++ b/Assets/style.css
@@ -10,11 +10,11 @@
 :: 1.0 Base CSS
 :: 2.0 Top Header Area CSS
 :: 3.0 Menu Area CSS
-:: 4.0 Wellcome Area CSS 
-:: 5.0 Top Feature Area CSS 
-:: 6.0 Blog Area CSS 
-:: 7.0 Instagram Area CSS 
-:: 8.0 Footer Social Area CSS 
+:: 4.0 Wellcome Area CSS
+:: 5.0 Top Feature Area CSS
+:: 6.0 Blog Area CSS
+:: 7.0 Instagram Area CSS
+:: 8.0 Footer Social Area CSS
 :: 9.0 Goole Map Area CSS
 :: 10.0 Sidebar Area CSS
 :: 11.0 Breadcumb Area CSS
@@ -50,6 +50,20 @@ body {
     font-family: 'Poppins', sans-serif;
     position: relative;
     z-index: auto;
+}
+#slider_home {
+  width: 100%;
+  height: 520px;
+  border-radius: 3px;
+  object-fit: cover;
+
+  &:nth-child(2n) {
+    clear: left;
+  }
+
+  &:nth-child(2n+1){
+    margin-right: 0;
+  }
 }
 
 h1,
@@ -478,7 +492,7 @@ li {
 }
 
 /* --------------------
-:: 4.0 Wellcome Area CSS 
+:: 4.0 Wellcome Area CSS
 -------------------- */
 
 .welcome-single-slide {
@@ -569,7 +583,7 @@ li {
 }
 
 /* --------------------
-:: 5.0 Top Feature Area CSS 
+:: 5.0 Top Feature Area CSS
 -------------------- */
 
 .categories_area {
@@ -617,7 +631,7 @@ li {
 }
 
 /* --------------------
-:: 6.0 Blog Area CSS 
+:: 6.0 Blog Area CSS
 -------------------- */
 
 .post-thumb img {
@@ -744,7 +758,7 @@ li {
 }
 
 /* --------------------
-:: 7.0 Instagram Area CSS 
+:: 7.0 Instagram Area CSS
 -------------------- */
 
 .instagram_gallery_item {
@@ -811,7 +825,7 @@ li {
 
 
 /* --------------------
-:: 8.0 Footer Social Area CSS 
+:: 8.0 Footer Social Area CSS
 -------------------- */
 
 .footer-social-area {
@@ -1190,7 +1204,7 @@ li {
     background-position: center center;
 }
 
-/* -------------------- 
+/* --------------------
 :: 14.0 Single Blog CSS
 -------------------- */
 
